Fix character buttons on mobile.

--- a/src/stylesheets/_characterButtons.scss
+++ b/src/stylesheets/_characterButtons.scss
@@ -1,10 +1,12 @@
 .character-buttons-wrapper {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px;
+  margin-left: -100px;
   color: white;
-  top: 40%;
-  left: 40%;
   display: flex;
-  gap: 80px;
+  gap: 50px;
   z-index: 11;
 
   button {
